--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "react-intersection-observer": "^8.31.0",
+    "react-ipgeolocation": "^1.4.0",
     "styled-components": "^5.2.1"
   },
   "devDependencies": {
