--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "gatsby-plugin-react-helmet": "^4.4.0",
     "gatsby-plugin-sharp": "^3.4.0",
     "gatsby-plugin-styled-components": "^4.4.0",
+    "gatsby-plugin-wpgraphql-seo": "^1.2.0",
     "gatsby-source-filesystem": "^3.4.0",
     "gatsby-source-wordpress": "^5.4.0",
     "gatsby-transformer-sharp": "^3.4.0",
     "react": "^17.0.2",
+    "react-device-detect": "^1.17.0",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "react-intersection-observer": "^8.31.0",
