--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gatsby-source-wordpress": "^5.4.0",
     "gatsby-transformer-sharp": "^3.4.0",
     "react": "^17.0.2",
+    "react-cookie-consent": "^6.2.4",
     "react-device-detect": "^1.17.0",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
